--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,17 @@
 /* Start Main Rules */
 
 body {
-  background-color: #888;
+  background-color: white;
+  height: 4000px;
 }
 
 .container {
   width: 1170px;
   margin: auto;
+}
+
+.clearfix {
+  clear: both;
 }
 /* End Main Rules */
 
@@ -47,3 +52,105 @@ body {
   color: #35CA79;
 }
 /* End Header */
+
+
+/* Start feautures */
+
+.features {
+  overflow: hidden;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.features .feat h2 {
+  text-transform: uppercase;
+}
+
+.features .feat {
+  float: left;
+  width: 33.333333%;
+  height: 150px;
+}
+/* End  feautures */
+
+/* Start Hobbies */
+
+.about-me {
+  background-color: #f2f2f2;
+  overflow: hidden;
+}
+
+.about-me .image {
+  width: 40%;
+  float: left;
+}
+
+.about-me .image img {
+  width: 100%;
+}
+
+.about-me .infos {
+  width: 60%;
+  float: left;
+}
+
+.about-me .infos .hobbies {
+  margin: 20px;
+  overflow: hidden;
+}
+
+.about-me .infos .hobbies > div {
+  float:left;
+  width: 50%;
+  min-height: 100px
+}
+/* End Hobbies */
+
+
+/* Start My Skills */
+
+.my-skills {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  overflow: hidden;
+}
+
+.my-skills .skills, .my-skills .progress {
+  width: 50%;
+  float: left;
+}
+/* End My Skills */
+
+/* Start Resume */
+
+.resume {
+  background-color: #f2f2f2;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+/* End Resume */
+
+/* Start My Education */
+
+.my-education {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  overflow: hidden;
+}
+
+.my-education .main, .my-education .experience {
+  width: 50%;
+  float: left;
+}
+/* End My Education */
+
+/* Start Testimonials */
+
+.testimonials {
+  background-color: #f2f2f2;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+/* End Testimonials */
