--- a/css/style.css
+++ b/css/style.css
@@ -154,3 +154,62 @@ body {
   text-align: center;
 }
 /* End Testimonials */
+
+
+/* Start Portfolio */
+
+.portfolio {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+.portfolio .our-work {
+  overflow: hidden;
+}
+
+.portfolio .our-work > div  {
+  float: left;
+  width: 33.333333%;
+  margin-bottom: 15px;
+}
+
+.portfolio .our-work > div img {
+  width: 92%;
+  margin: 10px;
+}
+
+/* End Portfolio */
+
+/* Start Contact Me */
+
+.contact {
+  background-color: #252f31;
+  overflow: hidden;
+}
+
+.contact h2 {
+  color: #FFF;
+}
+
+.contact p {
+  color: #6A6E71;
+}
+
+.contact .info, .contact .form {
+  width: 50%;
+  float: left;
+}
+/* End Contact Me */
+
+/* Start Footer */
+
+.footer {
+  background-color: #191E22;
+    color: #6A6E71;
+    padding: 10px 0;
+    text-align: center;
+}
+
+
+/* End Footer */
