--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ body {
 
 .about-me .image img {
   width: 100%;
+  height: 518px;
 }
 
 .about-me .infos {
@@ -130,16 +131,56 @@ body {
   float: left;
 }
 
+.about-me .infos p {
+  line-height: 1.6;
+  color: #666;
+}
+
+.about-me .infos h2 {
+  margin: 30px 0 20px 40px;
+  color: #444;
+}
+
+.about-me .infos > p {
+  margin: 0 0 20px 40px;
+}
+
+.about-me .infos > p:last-of-type {
+  margin-top: 15px;
+}
+
 .about-me .infos .hobbies {
   margin: 20px;
   overflow: hidden;
+  margin-left: 40px;
 }
 
-.about-me .infos .hobbies > div {
+.about-me .infos .hobbies .content {
   float:left;
   width: 50%;
   min-height: 100px
 }
+
+.about-me .infos .hobbies .content h3 {
+  color: #444;
+}
+
+.about-me .infos .hobbies .content .icon {
+  float: left;
+  width: 12%;
+  margin-top: 10px;
+  margin-right: 4%
+}
+
+.about-me .infos .hobbies .content .icon img {
+  max-width: 100%;
+}
+
+.about-me .infos .hobbies .content .text {
+  float: left;
+  width: 84%;
+}
+
 /* End Hobbies */
 
 
