--- a/css/style.css
+++ b/css/style.css
@@ -190,12 +190,62 @@ body {
   padding-top: 30px;
   padding-bottom: 30px;
   overflow: hidden;
+  padding-bottom: 50px;
 }
 
 .my-skills .skills, .my-skills .progress {
   width: 50%;
   float: left;
 }
+
+.my-skills .skills h2 {
+  margin: 30px 0 20px 40px;
+  color: #444;
+}
+
+.my-skills .skills p {
+  margin: 0 0 20px 40px;
+  line-height: 1.6;
+  color: #666;
+}
+
+.my-skills .skills p:last-of-type {
+  margin-top: 15px;
+}
+
+.my-skills .skills button {
+  background: none;
+  border: 2px solid #2dcc70;
+  margin-top: 20px;
+  margin-left: 40px;
+  padding: 10px 30px;
+  color: #2dcc70
+}
+
+.my-skills .progress .technique {
+  margin-left: 40px;
+}
+
+.my-skills .progress .technique h3 {
+  color: #444;
+  text-transform: uppercase;
+}
+
+.my-skills .progress .technique div {
+  background: #F2f2f2;
+  height: 25px;
+}
+
+.my-skills .progress .technique div span {
+  height: 25px;
+  display: block;
+  line-height: 25px;
+  background-color: #2dcc70;
+  text-align: right;
+  font-weight: bold;
+  color: #FFF;
+}
+
 /* End My Skills */
 
 /* Start Resume */
