--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,6 @@ body {
 .resume h2 {
   color: #444;
   font-weight: bold;
-  text-transform: uppercase;
 }
 
 .resume p {
@@ -279,10 +278,69 @@ body {
   overflow: hidden;
 }
 
+.my-education hr {
+  margin: 20px 0;
+  height: 1px;
+  background-color: #888;
+}
+
+.my-education .main {
+  width: 50%;
+  margin-right: 5px;
+  float: left;
+}
+
+.my-education .main h2 {
+  margin: 30px 0 20px 40px;
+  color: #444;
+}
+
+.my-education .main p {
+  margin: 0 0 20px 40px;
+  line-height: 1.6;
+  color: #666;
+}
+
+.my-education .main p:last-of-type {
+  margin-top: 15px;
+}
+
 .my-education .main, .my-education .experience {
   width: 50%;
   float: left;
 }
+
+.my-education .exp {
+  width: 45%;
+  float: right;
+}
+
+.my-education .exp h3 {
+  margin-top: 80px;
+  margin-bottom: 10px;
+  color: #555;
+}
+
+.my-education .exp span {
+  display: block;
+  margin-bottom: 10px
+}
+
+.my-education .exp span:first-of-type {
+  color: #999;
+}
+.my-education .exp span:last-of-type {
+  background: #2dcc70;
+  display: inline-block;
+  color: #FFF;
+  padding: 4px 10px;
+}
+
+.my-education .exp p {
+  line-height: 1.7;
+  color: #777;
+}
+
 /* End My Education */
 
 /* Start Testimonials */
