--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,16 @@ body {
   text-align: center;
 }
 
+.portfolio h2 {
+  color: #666
+}
+
+.portfolio p {
+  line-height: 1.7;
+  color: #777;
+  margin-bottom: 30px;
+}
+
 .portfolio .our-work {
   overflow: hidden;
 }
@@ -409,6 +419,9 @@ body {
 .portfolio .our-work > div img {
   width: 92%;
   margin: 10px;
+  padding: 3px;
+  background-color: #FFF;
+  border: 1px solid #CCC;
 }
 
 /* End Portfolio */
