--- a/css/style.css
+++ b/css/style.css
@@ -500,11 +500,23 @@ body {
 
 .footer {
   background-color: #191E22;
-    color: #6A6E71;
-    padding: 10px 0;
-    text-align: center;
+  color: #6A6E71;
+  padding: 5px 0;
+  text-align: center;
 }
 
+.footer ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.footer ul li {
+  display: inline-block;
+}
+
+.footer ul li img {
+  width: 24px;
+}
 
 /* End Footer */
 
